<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/fractions_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fractions"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operations"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_weight="1"
            android:id="@+id/addition_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addition"
            />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_weight="1"
            android:id="@+id/subtract_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtraction"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_weight="1"
            android:id="@+id/multiply_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_weight="1"
            android:id="@+id/division_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answers_number"/>

            <NumberPicker
                android:id="@+id/answers_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </NumberPicker>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_range"/>

            <NumberPicker
                android:id="@+id/number_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </NumberPicker>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presets"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:id="@+id/easy_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/medium_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/hard_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard"/>

    </LinearLayout>

</LinearLayout>